--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "expo-status-bar": "~2.2.3",
     "react": "19.0.0",
     "react-native": "0.79.2",
+    "react-native-safe-area-context": "^5.4.0",
     "tamagui": "^1.126.4"
   },
   "devDependencies": {
