--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@tamagui/core": "^1.126.4",
     "@tamagui/font": "^1.126.4",
     "@tamagui/themes": "^1.126.4",
+    "@tamagui/web": "^1.126.4",
     "expo": "~53.0.7",
     "expo-status-bar": "~2.2.3",
     "react": "19.0.0",
