--- a/package.json
+++ b/package.json
@@ -9,15 +9,22 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@magic-sdk/react-native-expo": "^30.0.6",
+    "@react-native-async-storage/async-storage": "^2.1.2",
     "@tamagui/config": "^1.126.4",
     "@tamagui/core": "^1.126.4",
     "@tamagui/font": "^1.126.4",
     "@tamagui/themes": "^1.126.4",
     "@tamagui/web": "^1.126.4",
     "expo": "~53.0.7",
+    "expo-constants": "^17.1.5",
     "expo-status-bar": "~2.2.3",
+    "install": "^0.13.0",
+    "npm": "^11.3.0",
     "react": "19.0.0",
     "react-native": "0.79.2",
+    "react-native-device-info": "^14.0.4",
+    "react-native-dotenv": "^3.4.11",
     "react-native-safe-area-context": "^5.4.0",
     "tamagui": "^1.126.4"
   },
