--- a/package.json
+++ b/package.json
@@ -11,7 +11,11 @@
   "dependencies": {
     "@magic-sdk/react-native-expo": "^30.0.6",
     "@react-native-async-storage/async-storage": "^2.1.2",
+    "@react-native-community/datetimepicker": "^8.3.0",
     "@react-native-community/netinfo": "^11.4.1",
+    "@react-navigation/native": "^7.1.7",
+    "@react-navigation/native-stack": "^7.3.11",
+    "@supabase/supabase-js": "^2.49.4",
     "@tamagui/config": "^1.126.4",
     "@tamagui/core": "^1.126.4",
     "@tamagui/font": "^1.126.4",
@@ -28,7 +32,10 @@
     "react-native-dotenv": "^3.4.11",
     "react-native-safe-area-context": "^5.4.0",
     "react-native-webview": "^13.13.5",
-    "tamagui": "^1.126.4"
+    "tamagui": "^1.126.4",
+    "react-dom": "19.0.0",
+    "react-native-web": "^0.20.0",
+    "@expo/metro-runtime": "~5.0.4"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
