--- a/package.json
+++ b/package.json
@@ -16,11 +16,6 @@
     "@react-navigation/native": "^7.1.7",
     "@react-navigation/native-stack": "^7.3.11",
     "@supabase/supabase-js": "^2.49.4",
-    "@tamagui/config": "^1.126.4",
-    "@tamagui/core": "^1.126.4",
-    "@tamagui/font": "^1.126.4",
-    "@tamagui/themes": "^1.126.4",
-    "@tamagui/web": "^1.126.4",
     "expo": "~53.0.7",
     "expo-constants": "^17.1.5",
     "expo-status-bar": "~2.2.3",
@@ -29,12 +24,9 @@
     "react": "19.0.0",
     "react-dom": "19.0.0",
     "react-native": "0.79.2",
-    "react-native-device-info": "^14.0.4",
     "react-native-dotenv": "^3.4.11",
     "react-native-safe-area-context": "^5.4.0",
-    "react-native-web": "^0.20.0",
-    "react-native-webview": "^13.13.5",
-    "tamagui": "^1.126.4"
+    "react-native-web": "^0.20.0"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
