--- a/package.json
+++ b/package.json
@@ -17,16 +17,21 @@
     "@react-navigation/native-stack": "^7.3.11",
     "@supabase/supabase-js": "^2.49.4",
     "expo": "~53.0.7",
+    "expo-blur": "~14.1.4",
     "expo-constants": "^17.1.5",
     "expo-status-bar": "~2.2.3",
     "install": "^0.13.0",
+    "nativewind": "^4.1.23",
     "npm": "^11.3.0",
     "react": "19.0.0",
     "react-dom": "19.0.0",
     "react-native": "0.79.2",
     "react-native-dotenv": "^3.4.11",
+    "react-native-paper": "^5.14.1",
+    "react-native-reanimated": "^3.16.2",
     "react-native-safe-area-context": "^5.4.0",
-    "react-native-web": "^0.20.0"
+    "react-native-web": "^0.20.0",
+    "tailwindcss": "^3.4.17"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
