customize profile photo upload design

--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@expo/metro-runtime": "~5.0.4",
+    "@expo/react-native-action-sheet": "^4.1.1",
     "@react-native-async-storage/async-storage": "^2.1.2",
     "@react-native-community/datetimepicker": "^8.3.0",
     "@react-native-community/netinfo": "^11.4.1",
@@ -19,6 +20,7 @@
     "expo": "~53.0.7",
     "expo-blur": "~14.1.4",
     "expo-constants": "^17.1.5",
+    "expo-image-picker": "~16.1.4",
     "expo-status-bar": "~2.2.3",
     "install": "^0.13.0",
     "nativewind": "^4.1.23",
@@ -32,8 +34,7 @@
     "react-native-reanimated": "^3.16.2",
     "react-native-safe-area-context": "^5.4.0",
     "react-native-web": "^0.20.0",
-    "tailwindcss": "^3.4.17",
-    "expo-image-picker": "~16.1.4"
+    "tailwindcss": "^3.4.17"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
