--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "react-native-paper": "^5.14.1",
     "react-native-reanimated": "^3.16.2",
     "react-native-safe-area-context": "^5.4.0",
+    "react-native-toast-message": "^2.3.0",
     "react-native-web": "^0.20.0",
     "tailwindcss": "^3.4.17"
   },
