--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "android": "expo start --android",
     "ios": "expo start --ios",
     "web": "expo start --web",
-    "dev": "expo start --web",
+    "dev": "expo start --web"
   },
   "dependencies": {
     "@expo/metro-runtime": "~5.0.4",
