--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@react-native-community/netinfo": "^11.4.1",
     "@react-navigation/native": "^7.1.7",
     "@react-navigation/native-stack": "^7.3.11",
+    "@stripe/stripe-react-native": "^0.37.0",
     "@supabase/supabase-js": "^2.49.4",
     "expo": "~53.0.7",
     "expo-blur": "~14.1.4",
@@ -24,6 +25,7 @@
     "expo-image-picker": "~16.1.4",
     "expo-status-bar": "~2.2.3",
     "install": "^0.13.0",
+    "lucide-react-native": "^0.359.0",
     "nativewind": "^4.1.23",
     "npm": "^11.3.0",
     "react": "19.0.0",
@@ -36,6 +38,7 @@
     "react-native-safe-area-context": "^5.4.0",
     "react-native-toast-message": "^2.3.0",
     "react-native-web": "^0.20.0",
+    "stripe": "^12.0.0",
     "tailwindcss": "^3.4.17"
   },
   "devDependencies": {
