--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "expo-blur": "~14.1.4",
     "expo-constants": "^17.1.5",
     "expo-image-picker": "~16.1.4",
+    "expo-router": "^5.0.6",
     "expo-status-bar": "~2.2.3",
     "install": "^0.13.0",
     "nativewind": "^4.1.23",
