--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "react-native-paper": "^5.14.1",
     "react-native-reanimated": "^3.17.5",
     "react-native-safe-area-context": "^5.4.0",
+    "react-native-screens": "^4.10.0",
     "react-native-toast-message": "^2.3.0",
     "react-native-web": "^0.20.0",
     "stripe": "^12.0.0",
