--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "react-native-safe-area-context": "^5.4.0",
     "react-native-screens": "^4.10.0",
     "react-native-toast-message": "^2.3.0",
+    "react-native-vector-icons": "^10.2.0",
     "react-native-web": "^0.20.0",
     "stripe": "^12.0.0",
     "tailwindcss": "^3.4.17"
@@ -47,6 +48,7 @@
   "devDependencies": {
     "@babel/core": "^7.25.2",
     "@types/react": "~19.0.10",
+    "@types/react-native-vector-icons": "^6.4.18",
     "typescript": "~5.8.3"
   },
   "private": true
