Update dependencies for React Navigation

--- a/package.json
+++ b/package.json
@@ -16,6 +16,9 @@
     "@react-native-async-storage/async-storage": "^2.1.2",
     "@react-native-community/datetimepicker": "^8.3.0",
     "@react-native-community/netinfo": "^11.4.1",
+    "@react-navigation/bottom-tabs": "^6.5.12",
+    "@react-navigation/native": "^6.1.10",
+    "@react-navigation/native-stack": "^6.9.18",
     "@stripe/stripe-react-native": "^0.37.0",
     "@supabase/supabase-js": "^2.49.4",
     "expo": "~53.0.7",
@@ -23,7 +26,6 @@
     "expo-constants": "^17.1.5",
     "expo-image-picker": "~16.1.4",
     "expo-linking": "^7.1.5",
-    "expo-router": "3.4.7",
     "expo-status-bar": "~2.2.3",
     "install": "^0.13.0",
     "nativewind": "^4.1.23",
