fixed broken pages and packages

--- a/package.json
+++ b/package.json
@@ -17,9 +17,9 @@
     "@react-native-community/datetimepicker": "^8.3.0",
     "@react-native-community/netinfo": "^11.4.1",
     "@react-navigation/bottom-tabs": "^7.3.12",
-    "@react-navigation/native": "^6.1.18",
-    "@react-navigation/native-stack": "^6.9.18",
-    "@stripe/stripe-react-native": "^0.37.0",
+    "@react-navigation/native": "^7.1.8",
+    "@react-navigation/stack": "^7.3.1",
+    "@stripe/stripe-react-native": "^0.45.0",
     "@supabase/supabase-js": "^2.49.4",
     "expo": "~53.0.7",
     "expo-blur": "~14.1.4",
@@ -28,10 +28,8 @@
     "expo-linking": "^7.1.5",
     "expo-status-bar": "~2.2.3",
     "install": "^0.13.0",
-    "lucide-react-native": "^0.509.0",
     "nativewind": "^4.1.23",
-    "npm": "^11.3.0",
-    "react": "19.0.0",
+    "react": "^19.0.0",
     "react-datepicker": "^8.3.0",
     "react-dom": "19.0.0",
     "react-native": "0.79.2",
