--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "expo": "~53.0.7",
     "expo-blur": "~14.1.4",
     "expo-constants": "^17.1.5",
+    "expo-image": "^2.1.7",
     "expo-image-picker": "~16.1.4",
     "expo-linking": "^7.1.5",
     "expo-status-bar": "~2.2.3",
