--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "@types/react": "~19.0.10",
     "@types/react-native-vector-icons": "^6.4.18",
     "react-native-svg-transformer": "^1.5.1",
+    "supabase": "^2.22.12",
     "typescript": "~5.8.3"
   },
   "private": true
